# JYNN

./: .gitignore  CMakeLists.txt  main.cpp
data/: biasVector.hpp  dynamic.hpp  scalableTensor.hpp  tensor.hpp  trivialTensor.hpp  zeroTensor.hpp
data/facilities/: allocator.hpp  category.hpp  continuousMem.hpp  device.hpp  lowerAccess.hpp  shape.hpp  traits.hpp
facilities/: traits.hpp
facilities/contMetaFuns/: helper.hpp  sequential.hpp  valueSequential.hpp
operation/facilities/: instanceID.hpp  operationFrame.hpp  organizer.hpp  policies.hpp
operation/operator/: abs.hpp  acos.hpp  acosh.hpp  add.hpp  asin.hpp  asinh.hpp  cos.hpp  divide.hpp  exp.hpp  multiply.hpp  negative.hpp  reduceSum.hpp  sigmoid.hpp  sign.hpp  sin.hpp  square.hpp  substract.hpp  tan.hpp  tanh.hpp
operation/tensor/: dot.hpp  permute.hpp  reshape.hpp  slice.hpp  tile.hpp
policy/: policy.hpp  policyContainer.hpp  policyMacroBegin.hpp  policyMacroEnd.hpp
test/: CMakeLists.txt
test/data_and_operation/: CMakeLists.txt  main.cpp  operation_operator.cpp  operation_policy.cpp  operration_Frame.cpp
test/others/: CMakeLists.txt  helper_test.cpp  main.cpp
